--- a/201835506__canvasEx6/app/src/main/res/anim/translate.xml
+++ b/201835506__canvasEx6/app/src/main/res/anim/translate.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-<!--    <translate android:fromXDelta="0%"-->
-<!--        android:toXDelta="100%p"-->
-<!--        android:duration="1500"-->
-<!--        />-->
+    <translate android:fromXDelta="0%"
+        android:toXDelta="100%p"
+        android:duration="1500"
+        />
 <!--    <scale-->
 <!--        android:duration="2500"-->
 <!--        android:pivotX="50%"-->
@@ -21,10 +21,14 @@
 <!--        android:fromYScale="1.0"-->
 <!--        android:toXScale="2.0"-->
 <!--        android:toYScale="2.0"/>-->
-    <rotate
-        android:fromDegrees="60"
-        android:toDegrees="100"
-        android:duration="2500"
-        android:pivotX="50%"
-        android:pivotY="50%"/>
+<!--    <rotate-->
+<!--        android:fromDegrees="60"-->
+<!--        android:toDegrees="100"-->
+<!--        android:duration="2500"-->
+<!--        android:pivotX="50%"-->
+<!--        android:pivotY="50%"/>-->
+<!--    <alpha-->
+<!--        android:fromAlpha="0.5"-->
+<!--        android:toAlpha="1.0"-->
+<!--        android:duration="2500" />-->
 </set>
