--- a/Marathon_Tablet/app/src/main/res/layout/custom_barcode_scanner.xml
+++ b/Marathon_Tablet/app/src/main/res/layout/custom_barcode_scanner.xml
@@ -7,8 +7,8 @@
         android:id="@+id/zxing_barcode_surface"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:zxing_framing_rect_height="100dp"
-        app:zxing_framing_rect_width="250dp" />
+        app:zxing_framing_rect_width="250dp"
+        app:zxing_framing_rect_height="50dp"/>
 
 
     <com.journeyapps.barcodescanner.ViewfinderView
@@ -17,8 +17,7 @@
         android:id="@+id/zxing_viewfinder_view"
         app:zxing_possible_result_points="@color/zxing_custom_possible_result_points"
         app:zxing_result_view="@color/white"
-        app:zxing_viewfinder_laser="@color/zxing_custom_viewfinder_laser"
-        app:zxing_viewfinder_mask="@color/white"
+        app:zxing_viewfinder_laser_visibility="false"
         />
 
 </merge>
