--- a/Marathon_Tablet/app/src/main/res/values-mdpi/dimens.xml
+++ b/Marathon_Tablet/app/src/main/res/values-mdpi/dimens.xml
@@ -8,6 +8,11 @@
     <dimen name="qrArea">280dp</dimen>
     <dimen name="buttonPadding">16dp</dimen>
 
+    <dimen name="phoneText">24dp</dimen>
+    <dimen name="phoneMargin">24dp</dimen>
+    <dimen name="phoneEditText">16dp</dimen>
+    <dimen name="phoneEditTextPadding">120dp</dimen>
+    <dimen name="phoneEditTextTBPadding">8dp</dimen>
     <dimen name="phoneButtonText">16dp</dimen>
-    <dimen name="phoneButtonPadding">60dp</dimen>
+    <dimen name="phoneButtonPadding">64dp</dimen>
 </resources>
