--- a/Marathon_Tablet/app/src/main/res/layout-land/activity_print.xml
+++ b/Marathon_Tablet/app/src/main/res/layout-land/activity_print.xml
@@ -16,11 +16,12 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_weight="2">
+        android:layout_weight="2"
+        android:padding="50dp">
 
 <!--        <ImageView-->
 <!--            android:layout_width="wrap_content"-->
@@ -30,11 +31,11 @@
 <!--        </ImageView>-->
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/image_print_background"
@@ -45,7 +46,7 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical">
